<resources>
    <string name="app_name">MyTweetApp</string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register For MyTweet</string>
    <string name="register">Register</string>
    <string name="not_registered">Not registered?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="defaultCharCount">140</string>
    <string name="edit_date">Edit Date</string>
    <string name="contact">Select Contact</string>
    <string name="emailTweet">Email Tweet</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="hot_take">Share your hot take</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="logout">Logout</string>
    <string name="new_tweet">New Tweet</string>
    <string name="delete_all">Delete All Tweets</string>
    <string name="delete">Delete</string>
    <string name="share_tweet_subject">Check out this tweet!</string>
    <string name="save">Save</string>
</resources>
