<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.mytweetapp.activities.TweetFragment">

    <TextView
        android:id="@+id/char_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/defaultCharCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tweet_input"
        android:layout_marginRight="32dp" />

    <EditText
        android:id="@+id/tweet_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hot_take"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/send_tweet_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/send_tweet"
        app:layout_constraintEnd_toStartOf="@+id/char_count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tweet_input"
        app:layout_constraintTop_toBottomOf="@+id/tweet_input"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/edit_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_date"
        app:layout_constraintEnd_toEndOf="@+id/send_tweet_button"
        app:layout_constraintStart_toStartOf="@+id/send_tweet_button"
        app:layout_constraintTop_toBottomOf="@+id/send_tweet_button"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/select_contact_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contact"
        app:layout_constraintEnd_toEndOf="@+id/char_count"
        app:layout_constraintStart_toStartOf="@+id/edit_date_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_button" />

    <Button
        android:id="@+id/email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/emailTweet"
        app:layout_constraintEnd_toEndOf="@+id/select_contact_button"
        app:layout_constraintStart_toStartOf="@+id/select_contact_button"
        app:layout_constraintTop_toBottomOf="@+id/select_contact_button" />

</android.support.constraint.ConstraintLayout>
